--- a/tutorial/src/parallelization.Rmd
+++ b/tutorial/src/parallelization.Rmd
@@ -6,7 +6,7 @@ With the integration of [parallelMap](https://github.com/berndbischl/parallelMap
 supported by **mlr**.
 
 All you have to do is select an interface by calling one of the
-[parallelStart<*>](&parallelMap::parallelStart) functions.
+[parallelStart*](&parallelMap::parallelStart) functions.
 The first annotated loop **mlr** encounters will then be automatically parallelized.
 Afterwards it is good practice to call [parallelStop](&parallelMap::parallelStop).
 
@@ -23,7 +23,7 @@ We offer different parallelization levels for fine grain control over the parall
 E.g., if you do not want to parallelize the [&benchmark] function because it has only very
 few iterations but want to parallelize the [resampling](&resample) of each learner instead,
 you can specifically pass the ``level`` `"resample"` to the
-[parallelStart<*>](&parallelMap::parallelStart) function.
+[parallelStart*](&parallelMap::parallelStart) function.
 Currently the following levels are supported:
 ```{r}
 parallelShowRegisteredLevels()
