fixed some errors

--- a/tutorial/src/over_and_undersampling.Rmd
+++ b/tutorial/src/over_and_undersampling.Rmd
@@ -1,32 +1,19 @@
-# Imbalanced Classification Problems: Over- and Undersampling
+# Imbalanced Classification Problems
+
+
+## Over- and Undersampling
 
 For unevenly distributed classes in the data, it might be useful to oversample
 the minority or undersample the majority class.
 
 
-## Data frames
-
-First we show how it is done for `data.frame`s:
-
-```{r overundersampling}
-classA = data.frame(x = rnorm(20, mean=1), class = "A")
-classB = data.frame(x = rnorm(80, mean=2), class = "B")
-data = rbind(classA, classB)
-table(data$class)
-data.over = oversample(data, "class", rate = 4)
-table(data.over$class)
-data.under = undersample(data, "class", rate = 1/4)
-table(data.under$class)
-```
-
-
-## Tasks
+### Tasks
 
 Now let's see what the effect is for a classification task:
 ```{r oversampling_classif}
 data.even = rbind(
-  data.frame(x = rnorm(50, mean=1), class = "A"),
-  data.frame(x = rnorm(50, mean=2), class = "B"))
+    data.frame(x = rnorm(50, mean = 1), class = "A"),
+    data.frame(x = rnorm(50, mean = 2), class = "B"))
 task = makeClassifTask(data = data, target = "class")
 task.over = oversample(task, rate = 4)
 task.under = undersample(task, rate = 1/4)
@@ -40,7 +27,7 @@ performance(predict(mod.under, newdata = data.even), measures = mmce)
 ```
 
 
-## Learners
+### Learners
 
 Note that it is _highly dependent_ on the learner if over- or undersampling will
 be useful. You are also able to wrap the over- and undersampling within the learner.
@@ -54,3 +41,7 @@ performance(predict(mod, newdata = data.even), measures = mmce)
 performance(predict(mod.over, newdata = data.even), measures = mmce)
 performance(predict(mod.under, newdata = data.even), measures = mmce)
 ```
+
+### SMOTE
+[&smote]
+[&makeSMOTEWrapper]
